--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>IT-Devs</h1><img src='http://imgfz.com/i/Lfg5X6w.jpeg' />
+							<h1>IT-Devs</h1><img src='http://imgfz.com/i/Lfg5X6w.jpeg' alt='' />
 							<p class="major">Bienvenidos a nuestro Blog! Aqui encontraras parte de nuestra 
 								información compartida en la comunidad, y detalle de últimas tecnologías; 
 								las mismas que utilizamos para diseñar tu sitio web!.</p>
@@ -214,7 +214,7 @@
 								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								
 							</ul>
-							<img src='http://imgfz.com/i/Lfg5X6w.jpeg' /><p><h2> www.it-devs.com</p></h2>
+							<img src='http://imgfz.com/i/Lfg5X6w.jpeg' alt=''/><p><h2> www.it-devs.com</p></h2>
 						</div>
 					</footer>
 
