--- a/index.html
+++ b/index.html
@@ -182,23 +182,23 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Contactanos</h2>
-							<form method="post" action="#">
+							<form method="post" action="#" id="form">
 								<div class="fields">
 									<div class="field half">
-										<label for="name">Nombre</label>
-										<input type="text" name="name" id="name" value="" />
+										<label for="name" name="name">Nombre</label>
+										<input type="text" name="nombre" id="name" value="" />
 									</div>
 									<div class="field half">
-										<label for="email">Email</label>
+										<label for="email" name="email">Email</label>
 										<input type="email" name="email" id="email" value="" />
 									</div>
 									<div class="field">
-										<label for="message">Mensaje</label>
+										<label for="message" name="comentario">Mensaje</label>
 										<textarea name="message" id="message" rows="6"></textarea>
 									</div>
 								</div>
 								<ul class="actions special">
-									<li><input type="submit" name="submit" id="submit" value="Enviar Mensaje" /></li>
+									<li><button id="send">Enviar Mensaje</button></li>
 								</ul>
 							</form>
 
@@ -219,6 +219,37 @@
 					</footer>
 
 			</div>
+
+			<!-- The core Firebase JS SDK is always required and must be listed first -->
+			<script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
+			<script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-database.js"></script>
+
+			<!-- TODO: Add SDKs for Firebase products that you want to use
+				https://firebase.google.com/docs/web/setup#available-libraries -->
+			<script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-analytics.js"></script>
+
+			<script>
+			// Your web app's Firebase configuration
+			// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+			var firebaseConfig = {
+				apiKey: "AIzaSyCDc0sSwZuDtisxkMNOSD6x6VebgIUSnWo",
+				authDomain: "primerproyecto-d82ad.firebaseapp.com",
+				databaseURL: "https://primerproyecto-d82ad-default-rtdb.firebaseio.com",
+				projectId: "primerproyecto-d82ad",
+				storageBucket: "primerproyecto-d82ad.appspot.com",
+				messagingSenderId: "1087237858153",
+				appId: "1:1087237858153:web:6239bb34f1c1f9ecfb93f8",
+				measurementId: "G-QXJ11K95TF"
+			};
+			// Initialize Firebase
+			firebase.initializeApp(firebaseConfig);
+			firebase.analytics();
+			</script>
+
+
+
+
+			<script src="./fire.js"></script>
 			
 
 		<!-- Scripts -->
