--- a/index.html
+++ b/index.html
@@ -221,38 +221,35 @@
 			</div>
 
 			<!-- The core Firebase JS SDK is always required and must be listed first -->
-			<script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
-			<script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-database.js"></script>
+				<script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+				<script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-database.js"></script>
 
-			<!-- TODO: Add SDKs for Firebase products that you want to use
-				https://firebase.google.com/docs/web/setup#available-libraries -->
-			<script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-analytics.js"></script>
+				<!-- TODO: Add SDKs for Firebase products that you want to use
+				     https://firebase.google.com/docs/web/setup#available-libraries -->
 
-			<script>
-			// Your web app's Firebase configuration
-			// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-			var firebaseConfig = {
-				apiKey: "AIzaSyCDc0sSwZuDtisxkMNOSD6x6VebgIUSnWo",
-				authDomain: "primerproyecto-d82ad.firebaseapp.com",
-				databaseURL: "https://primerproyecto-d82ad-default-rtdb.firebaseio.com",
-				projectId: "primerproyecto-d82ad",
-				storageBucket: "primerproyecto-d82ad.appspot.com",
-				messagingSenderId: "1087237858153",
-				appId: "1:1087237858153:web:6239bb34f1c1f9ecfb93f8",
-				measurementId: "G-QXJ11K95TF"
-			};
-			// Initialize Firebase
-			firebase.initializeApp(firebaseConfig);
-			firebase.analytics();
-			</script>
+				<script>
+				  // Your web app's Firebase configuration
+				  var firebaseConfig = {
+				    apiKey: "AIzaSyA2aVp__bqyumeH2Cv1m3Mhi4bEynbAHS4",
+				    authDomain: "it-devs-web-site.firebaseapp.com",
+				    databaseURL: "https://it-devs-web-site-default-rtdb.firebaseio.com",
+				    projectId: "it-devs-web-site",
+				    storageBucket: "it-devs-web-site.appspot.com",
+				    messagingSenderId: "56277694014",
+				    appId: "1:56277694014:web:49ed73d4c6f93bb62d436f"
+				  };
+				  // Initialize Firebase
+				  firebase.initializeApp(firebaseConfig);
+				</script>
 
 
 
 
-			<script src="./fire.js"></script>
+			
 			
 
 		<!-- Scripts -->
+			<script src="./fire.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
