Redirecting for Post added.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<h2>La Importancia del Diseño Web</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Leer...</a></li>
+								<li><a href="https://www.europapress.es/comunicados/sociedad-00909/noticia-comunicado-diseno-web-importancia-estrategia-marketing-digital-20180129092119.html#:~:text=El%20dise%C3%B1o%20de%20la%20p%C3%A1gina,contenido%20por%20el%20que%20accedi%C3%B3." target="_blank" class="button">Leer...</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -53,7 +53,7 @@
 							<h2>Beneficios del E-Commerce</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Leer</a></li>
+								<li><a href="https://www.forbes.com.mx/7-ventajas-que-tu-empresa-debe-saber-sobre-el-e-commerce/" target="_blank" class="button">Leer</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -67,7 +67,7 @@
 							<h2>Que la Tecnología haga crecer tu Negocio</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Leer</a></li>
+								<li><a href="https://www.larepublica.co/consumo/tendencias-para-el-comercio-electronico-2962138" target="_blank" class="button">Leer</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -208,13 +208,15 @@
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
+					 		<h2>Proximamente podrás seguirnos en redes sociales!</h2>
 							<ul class="icons">
 								<li><a href="#" class="icon brands style2 fa-youtube"><span class="label">Youtube</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								
 							</ul>
-							<img src='http://imgfz.com/i/Lfg5X6w.jpeg' alt=''/><p><h2> www.it-devs.com</p></h2>
+							<img src='http://imgfz.com/i/Lfg5X6w.jpeg' alt=''/><br/>
+							<a href="www.it-devs.ga" ><h2>www.it-devs.ga<h/2></a>
 						</div>
 					</footer>
 
