--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 								
 							</ul>
 							<img src='http://imgfz.com/i/Lfg5X6w.jpeg' alt=''/><br/>
-							<a href="www.it-devs.ga" ><h2>www.it-devs.ga<h/2></a>
+							<a href="https://it-devs.ga/" ><h2>www.it-devs.ga<h/2></a>
 						</div>
 					</footer>
 
